[package]
name = "bk-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docker-rs = "0.1.0"
reqwest = { version = "0.11.15", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"]}
thiserror = "1.0.40"
bollard = "0.14.0"
futures-util = { version = "0.3.27", features = ["tokio-io"] }
