[package]
name = "bk-orchestrator"
version = "0.0.1"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "bk-orchestrator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docker-rs = "0.1"
reqwest = { version = "0.11", features = ["serde_json", "json"] }
tokio = { version = "1.26", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3", features = ["v4", "serde", "fast-rng", "macro-diagnostics"]}
thiserror = "1.0.40"
bollard = "0.14"
futures-util = { version = "0.3", features = ["tokio-io"] }
enum_dispatch = "0.3"
clap = { version = "4.2", features = ["env", "derive"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "0.2"
